--- a/appz.yml
+++ b/appz.yml
@@ -31,9 +31,9 @@ properties:
     DB_PORT: 5432
     DB_DATABASE: php
     DB_USERNAME: php
-    #DB_PASSWORD: VUwEoKDqt26Vrl4aT29E
-    DB_PASSWORD:
-          vault: PHP_PASSWORD
+    DB_PASSWORD: bwUmhSkFlNMDZJYtGFJl
+    #DB_PASSWORD:
+    #      vault: PHP_PASSWORD
     
     #ELASTIC_MIGRATE: 0
     #DB_AUTHENTICATION_DATABASE: Admin
