--- a/appz.yml
+++ b/appz.yml
@@ -33,7 +33,7 @@ properties:
     DB_USERNAME: php
     #DB_PASSWORD: bwUmhSkFlNMDZJYtGFJl
     DB_PASSWORD:
-        vault: PHP_PASSWORD
+        vault: DB_PASSWORD
     
     #ELASTIC_MIGRATE: 0
     #DB_AUTHENTICATION_DATABASE: Admin
